<resources>
    <string name="app_name">Happy Food</string>
    <string name="happy_food">Happy Food</string>
    <string name="img_logo_description">logo</string>
    <string name="mobile_number">Mobile Number (10 digits)</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="enter_name">Name (Min. 3 characters)</string>
    <string name="address">Delivery Address</string>
    <string name="choose_password">Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration">Register</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="register_yourself">
        <u>Don\'t have an account? Sign up now</u>
    </string>
    <string name="forgot_password">
        <u>Forgot Password?</u>
    </string>
    <string name="email">Email Address</string>
    <string name="enter_mobile_forgot_password">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="cnp">Choose New Password</string>
    <string name="no_data_received">No data received!!</string>
    <string name="dummy">dummy text</string>
    <string name="home">Home</string>
    <string name="user_profile">User Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Log Out</string>
    <string name="applogo">AppLogo</string>
    <string name="preference_file_name">Happy Food Preferences</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="navigation_drawer">Happy Food</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="order_history_fragment">Order History Fragment</string>
    <string name="favourite_restaurant_fragment">Favourite Restaurant Fragment</string>
    <string name="faqs_fragment">FAQs Fragment</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="name_of_the_restaurant">Name of the restaurant</string>
    <string name="list_item">List Item</string>
    <string name="dish_images">Dish Images</string>
    <string name="rs_300_person">Rs. 300/person</string>
    <string name="_4_5">4.5</string>
    <string name="check_internet">Check Internet</string>
</resources>