<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/user_profile" />

        <item
            android:id="@+id/favourites"
            android:icon="@drawable/ic_favourite"
            android:title="@string/favourite_restaurants" />

        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />


    </group>
</menu>

