<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    tools:context=".activity.LoginActivity"
    android:background="@drawable/gradient_background">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/app_logo_500"/>

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/mobile_number"
        android:inputType="number"
        app:backgroundTint="@null"
        android:background="@drawable/text_boundary_background"
        android:maxLength="10"
        android:drawableStart="@drawable/ic_action_phone"
        android:drawablePadding="3dp"
        android:maxLines="1"
        android:padding="10dp"
        android:autofillHints="phone" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:background="@drawable/text_boundary_background"
        android:maxLines="1"
        android:drawableStart="@drawable/ic_action_security"
        android:drawablePadding="3dp"
        android:padding="10dp"
        android:autofillHints="password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:backgroundTint="@null"
        android:background="@drawable/button_boundary_background"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="5dp"
        android:padding="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtRegisterYourself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:focusable="true"
            android:textAllCaps="false"
            android:padding="8dp"
            android:textAlignment="center"
            android:text="@string/register_yourself"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>
</LinearLayout>