<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlForgotPass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity">

    <RelativeLayout
        android:id="@+id/rlContentMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <ImageView
            android:id="@+id/imgAppLogo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/app_logo_500" />

        <TextView
            android:id="@+id/txtEnterMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgAppLogo"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/enter_mobile_forgot_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />
        <EditText
            android:id="@+id/etForgotMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_below="@id/txtEnterMobile"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:maxLength="15"
            android:background="@drawable/text_boundary_background"
            android:maxLines="1"
            android:drawableStart="@drawable/ic_action_phone"
            android:drawablePadding="3dp"
            android:padding="10dp"
            android:autofillHints="mobile" />

        <EditText
            android:id="@+id/etForgotEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_below="@id/etForgotMobile"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="15"
            android:background="@drawable/text_boundary_background"
            android:maxLines="1"
            android:drawableStart="@drawable/ic_action_email"
            android:drawablePadding="3dp"
            android:padding="10dp"
            android:autofillHints="email" />

        <Button
            android:id="@+id/btnForgotNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/etForgotEmail"
            app:backgroundTint="@null"
            android:background="@drawable/button_boundary_background"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"/>
    </RelativeLayout>
</RelativeLayout>