<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.RegisterActivity"
    android:fillViewport="true"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rlRegister"
        android:background="@color/purple_200">

        <!--This is how you can include another layout
        inside a layout file. We might need toolbar again
        and again inside our project, so we just made one separate
        layout file and then use it inside any layout file using the
        include tag-->
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <ImageView
            android:id="@+id/imgAppLogo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/app_logo_500"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgAppLogo"
            android:layout_marginLeft="12dip"
            android:background="@drawable/text_boundary_background"
            android:layout_marginTop="30dip"
            android:layout_marginRight="12dip"
            android:hint="@string/enter_name"
            android:padding="10dip"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_action_person"
            android:drawablePadding="3dp"
            android:autofillHints="textName"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etName"
            android:background="@drawable/text_boundary_background"
            android:layout_marginLeft="12dip"
            android:layout_marginTop="6dip"
            android:layout_marginRight="12dip"
            android:drawableStart="@drawable/ic_action_email"
            android:drawablePadding="3dp"
            android:maxLines="1"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dip"
            android:singleLine="true"
            android:autofillHints="mike@test.com"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_boundary_background"
            android:layout_below="@+id/etEmail"
            android:layout_marginLeft="12dip"
            android:layout_marginTop="6dip"
            android:layout_marginRight="12dip"
            android:maxLength="10"
            android:autofillHints="textPhoneNumber"
            android:drawableStart="@drawable/ic_action_phone"
            android:drawablePadding="3dp"
            android:maxLines="1"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:padding="10dip"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_boundary_background"
            android:layout_below="@+id/etPhoneNumber"
            android:layout_marginLeft="12dip"
            android:layout_marginTop="6dip"
            android:layout_marginRight="12dip"
            android:gravity="top"
            android:autofillHints="textEmailAddress"
            android:drawableStart="@drawable/ic_action_address"
            android:drawablePadding="3dp"
            android:hint="@string/address"
            android:padding="10dip"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:background="@drawable/text_boundary_background"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etAddress"
            android:layout_marginLeft="12dip"
            android:layout_marginTop="6dip"
            android:layout_marginRight="12dip"
            android:hint="@string/choose_password"
            android:inputType="numberPassword"
            android:padding="10dip"
            android:maxLength="6"
            android:autofillHints="numberPassword"
            android:drawableStart="@drawable/ic_action_security"
            android:drawablePadding="3dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_boundary_background"
            android:layout_below="@+id/etPassword"
            android:layout_marginLeft="12dip"
            android:layout_marginTop="6dip"
            android:layout_marginRight="12dip"
            android:hint="@string/confirm_password"
            android:inputType="numberPassword"
            android:autofillHints="numberPassword"
            android:padding="10dip"
            android:singleLine="true"
            android:maxLength="6"
            android:drawableStart="@drawable/ic_action_security"
            android:drawablePadding="3dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etConfirmPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="12dip"
            android:layout_marginTop="40dip"
            android:layout_marginRight="12dip"
            android:background="@drawable/button_boundary_background"
            android:backgroundTint="@color/color_logo"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"/>
    </RelativeLayout>
</ScrollView>